error-pages/error-pages-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages
  labels:
    app: error-pages
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: error-pages
  template:
    metadata:
      labels:
        app: error-pages
    spec:
      containers:
        - name: error-pages
          image: tarampampam/error-pages:3.3.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            # Run the container as nobody:nogroup
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - NET_RAW
          resources:
            requests:
              cpu: 50m
              memory: 16Mi
            limits:
              memory: 32M
              cpu: 100m
